# medeas

./: .gitignore  README.md  README.rst  main.py  options.py  prepare.py  simulate.py  single_pass.py  tracy.py  transcode.py
bammds/: bamdamage.pl  bammds.pl  bammds_allelesharing.cpp  bammds_allelesharingsum.cpp  bammds_fillout.pl  bammds_merge  bammds_plot.r  log.txt  medeas_plot.py
bammds/tmp/: Wollstein.hg19.legend.csv  Wollstein.hg19.legend.filled.csv
doc/: Gus.Subsample.bam  HDGP.Reference.Subsample.txt  HDGP.Reference.legend.csv  HDGP.Reference.legend.filled.csv  Makefile.am  Makefile.in  TUTORIAL  medeas_flowchart.dot
github_fordummies/: readme.txt
processing/: barplot.py  filter_freqs.py  filtering.py  freqs.py  hardfilter.py  recode.py  visualizing.py  visualout.py  visualstack.py
script/: Snakefile  config.yaml  label.lab  launch.sh  readme.md
script/envs/: base.yaml
src/: a.txt  clustering.py  dummy_generator.py  extrapolate_split_time.py  lambda_analyze.py  make_asd.py  mds.py  medeas_plot.py  medeas_plot.py~  plot.py  removing.py  sampler.py  simulation.py  test_pipe.py
src/old_scripts/: McVean_Levkivskyi.py  Rcmdscale.py  T_values.py  analyt.py  application_realhumandata 2.py  application_realhumandata.py  austr.py  austr2.py  austr3.py  austr4.py  austr_mini.py  austr_nice_clusters.py  biotest_3d.py  exp.py  jaccknife_bim.py  main_simul_eigenvalues_distribution.py  main_simul_mds_pca.py  main_simul_pres.py  mds.nb  (+8 more)
test/: Wollstein.hg19.chr21.chr22.genotypes.tfam  dist.whatever.dist  dist.whatever.nosex  newnew.txt  readme.md  tstpipe.py
